<resources>
    <string name="app_name">Menu</string>
    <string name="example_string">Example String</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="map_auto_save">Map Auto Save</string>
    <string name="mute">Mute</string>
    <string name="user_nickname">User Nickname</string>
    <string name="example_nickname">Example Nickname</string>
    <string name="set">SET</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="open_map_lists">Open map lists</string>
    <string name="open_element_editor">Open element editor</string>
    <string name="button_yes">Apply</string>
    <string name="button_no">Cancel</string>
    <string name="enter_nickname">Enter Nickname</string>
</resources>